# watchsock

./: Cargo.toml  README.md
.trunk/: trunk.yaml
src/: main.rs  watch.rs
